ver 0.3.0
- Added "file" type to help menu.
- Added "tooltip" option to all components.
- Supported alternate spellings for some json keys and values.
- Updated wxWidgets to v3.2.2
- Removed more codes from wxWidgets to reduce the binary size.

ver 0.2.3
- Fixed errors when using non-ascii characters in labels.
- Fixed an error when a command requires more components for arguments.
- Fixed some examples that will raise the command error.
- Fixed an error when executing the default command.
- Used hash instead of label in gui_config.json
- Removed unnecessary codes from wxWidgets to reduce the binary size.

ver 0.2.2
- Added "id" option to all components.
  (It'll be used as a variable name for the command and gui_config.json)
- Improved json validator

ver0.2.1
- Introduced wxBoxSizer to align components automatically.
- Added "default" option to all components.
- Fixed a bug that non-ascii characters won't be shown up as "empty_message." (Windows)
- Fixed a bug that LogFrame can't catch non-ascii characters from std::cout. (Linux)
- Fixed an error when executing non-ascii commands. (Unix)
- Fixed an error when saving non-ascii characters for text box.

ver0.2.0
- Made "button" key optional
- Fixed a bug that text boxes can't handle their input values properly.
- Modified window size for macOS
- Removed null values from gui_config.json
- Introduced tests and linting

ver0.1.3
- Added "empty_message" option to text box and pickers. They can show messages when their text boxes are empty.
- Added "default" option to check box and text box
- Fixed errors when failing to read json files
- Removed dependancies from macOS build

ver0.1.2
- Fixed a bug it needs dll for runtime libs

ver0.1.1
- Added textbox to GUI components
- Changed json format
- Fixed an error when reading utf-16 strings from stdout
- Fixed a bug can't read configs for checkboxes

ver0.1.0
- Added support for mac and linux (ubuntu)
- Added console window for linux
- Added add_quotes option to components