@@ -1,6 +1,7 @@
 #include "main_frame.h"
 
 const char* VERSION = "0.2.3";
+const int VERSION_INT = 203;
 
 #ifndef _WIN32
 void MainFrame::CalcExePath() {
@@ -93,11 +94,9 @@ void MainFrame::CreateFrame() {
     SetWindowStyleFlag(wxDEFAULT_FRAME_STYLE & ~wxRESIZE_BORDER & ~wxMAXIMIZE_BOX);
 }
 
-void MainFrame::JsonLoadFailed(std::string msg, nlohmann::json& definition) {
-    *m_ostream << "[LoadDefinition] " << msg << std::endl;
+void MainFrame::JsonLoadFailed(std::string msg) {
+    *m_ostream << "[LoadDefinition] Error: " << msg << std::endl;
     ShowErrorDialog(msg);
-    nlohmann::json sub_definition = json_utils::GetDefaultDefinition();
-    definition["gui"] = nlohmann::json::array({ sub_definition });
 }
 
 // read gui_definition.json
@@ -106,8 +105,40 @@ void MainFrame::CheckDefinition(nlohmann::json& definition) {
 
     if (definition.empty()) {
         msg = "Fialed to load gui_definition.json (Can't read)";
-        JsonLoadFailed(msg, definition);
+        JsonLoadFailed(msg);
+        nlohmann::json sub_definition = json_utils::GetDefaultDefinition();
+        definition["gui"] = nlohmann::json::array({ sub_definition });
         return;
+    }
+
+    try {
+        json_utils::CheckVersion(definition);
+        std::string key = "recommended";
+        if (definition.contains(key)) {
+            std::string version = definition[key];
+            int version_int = definition[key + "_int"];
+            if (version_int != VERSION_INT) {
+                msg = "Version " + version + " is " + key + ".";
+                *m_ostream << "[LoadDefinition] Warning: " << msg << std::endl;
+            }
+        }
+    }
+    catch(std::exception& e) {
+        msg = "Invalid version info (" + std::string(e.what()) + ")";
+        JsonLoadFailed(msg);
+    }
+
+    if (definition.contains("minimum_required")) {
+        std::string key = "minimum_required";
+        std::string required = definition[key];
+        int required_int = definition[key + "_int"];
+        if (VERSION_INT < required_int) {
+            msg = "Version " + required + " is required.";
+            JsonLoadFailed(msg);
+            nlohmann::json sub_definition = json_utils::GetDefaultDefinition();
+            definition["gui"] = nlohmann::json::array({ sub_definition });
+            return;
+        }
     }
 
     // check help urls
@@ -117,7 +148,7 @@ void MainFrame::CheckDefinition(nlohmann::json& definition) {
         }
         catch(std::exception& e) {
             msg = "Fialed to load help URLs (" + std::string(e.what()) + ")";
-            *m_ostream << "[LoadDefinition] " << msg << std::endl;
+            JsonLoadFailed(msg);
             definition.erase("help");
         }
     }
@@ -128,7 +159,9 @@ void MainFrame::CheckDefinition(nlohmann::json& definition) {
     }
     catch (std::exception& e) {
         msg = "Fialed to load gui_definition.json (" + std::string(e.what()) + ")";
-        JsonLoadFailed(msg, definition);
+        JsonLoadFailed(msg);
+        nlohmann::json sub_definition = json_utils::GetDefaultDefinition();
+        definition["gui"] = nlohmann::json::array({ sub_definition });
         return;
     }
 
